<resources>
    <string name="app_name">Project Void</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">----------------- or -----------------</string>
    <string name="not_a_user">Not a User?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="signin_button">signIn button</string>
    <string name="email_id">Email ID</string>
    <string name="password_again">Password Again</string>
    <string name="already_a_user">Already a User?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
</resources>