<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.voidd.pillcaddy.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_background"
        tools:context=".auth.SignInActivity">

    <LinearLayout
        android:id="@+id/app_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="142dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:src="@drawable/app_logo"/>

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:src="@drawable/app_name_login"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_layout">


        <LinearLayout
            android:id="@+id/sign_in_layout"
            android:layout_width="300dp"
            android:layout_height="360dp"
            android:background="@drawable/card_signin"
            android:orientation="vertical"
            android:padding="16dp"
            android:elevation="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/login_header" />

            <EditText
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="16sp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:shadowColor="#000000"
                android:singleLine="true"
                android:text="@={viewmodel.email}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

            <EditText
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginTop="16sp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:shadowColor="#000000"
                android:singleLine="true"
                android:text="@={viewmodel.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/roboto"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/login_google"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_google"
                    android:clickable="true"
                    android:contentDescription="@string/google"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_google" />

                <ImageButton
                    android:id="@+id/login_facebook"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="24dp"
                    android:background="@drawable/ic_facebook"
                    android:clickable="true"
                    android:contentDescription="@string/facebook"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_facebook" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/login_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="-39dp"
            android:layout_marginLeft="-39dp"
            android:layout_marginTop="250dp"
            android:layout_toEndOf="@+id/sign_in_layout"
            android:layout_toRightOf="@+id/sign_in_layout"
            android:background="@drawable/login_button"
            android:contentDescription="@string/signin_button"
            android:elevation="10dp"
            android:focusable="true"
            android:onClick="@{() -> viewmodel.signIn()}"
            android:scaleType="fitCenter"
            android:src="@drawable/login_button"
            app:icon="@drawable/login_button" />


    </RelativeLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/not_a_user"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_login_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto"
            android:onClick="@{(v) -> viewmodel.gotoSignUp(v)}"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressbar"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/load_screen" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
