<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.voidd.pillcaddy.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_background"
        tools:context=".auth.SignUpActivity">

        <LinearLayout
            android:id="@+id/app_logo_layout"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="142dp"
                android:layout_height="124dp"
                android:layout_gravity="center"
                android:src="@drawable/app_logo"/>

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:src="@drawable/app_name_login"
                android:layout_gravity="center"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo_layout"
            android:gravity="right">


            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="300dp"
                android:layout_height="340dp"
                android:background="@drawable/card_signup"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:elevation="10dp"
                android:gravity="center_horizontal">
                
                
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/signup_header"
                    />

                <EditText
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/email_id"
                    android:shadowColor="#000000"
                    android:singleLine="true"
                    android:text="@={viewmodel.email}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    tools:targetApi="lollipop" />


                <EditText
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/password"
                    android:shadowColor="#000000"
                    android:singleLine="true"
                    android:text="@={viewmodel.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    tools:targetApi="lollipop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/or"
                    android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                >

                <ImageButton
                    android:id="@+id/login_google"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_google"
                    android:clickable="true"
                    android:contentDescription="@string/google"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_google"
                    android:layout_marginRight="24dp"/>

                <ImageButton
                    android:id="@+id/login_facebook"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_facebook"
                    android:clickable="true"
                    android:contentDescription="@string/facebook"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_facebook" />

            </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/sign_up_button"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_alignStart="@+id/sign_up_layout"
                android:layout_alignLeft="@+id/sign_up_layout"
                android:layout_marginStart="-40dp"
                android:layout_marginLeft="-40dp"
                android:layout_marginTop="230dp"
                android:background="@drawable/sign_up_button"
                android:clickable="true"
                android:contentDescription="@string/sign_up"
                android:elevation="10dp"
                android:focusable="true"
                android:onClick="@{() -> viewmodel.signUp()}"
                android:scaleType="fitCenter"
                android:src="@drawable/sign_up_button" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_layout"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/already_a_user"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_signup_to_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:onClick="@{(v) -> viewmodel.gotoSignIn(v)}"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressbar"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/load_screen" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
